login-panel completed

--- a/public/tasks/src/app/views/homepageRequest/homepageRequest.html
+++ b/public/tasks/src/app/views/homepageRequest/homepageRequest.html
@@ -141,13 +141,26 @@
 					</div>
 					<div class="break-line"></div>
 				</div>
-				<div class="work-zone">
+				<div class="work-zone clearfix">
 					<div class="work-item">
 						<div class="work-wrapper">
-							<img src="" alt="">
-							<i class="icon-work-delete"></i>
+							<img src="/img/work-item-1.png" alt="用户作品">
+							<input class="work-delete-btn" type="button" value="删除">
+							<!-- delete-button为hover时效果 -->
 						</div>
-						<div class="work-detail"></div>
+						<div class="work-detail clearfix">
+							<span class="pubtime">11:00</span>
+							<span class="communicate">
+								<span class="comment">
+									<i class="icon-comment-small"></i>
+									<span class="comment-text-small"></span>
+								</span>
+								<span class="like">
+									<i class="icon-like-small"></i>
+									<span class="like-text-small"></span>
+								</span>
+							</span>
+						</div>
 					</div>
 					<div class="work-item"></div>
 					<div class="work-item"></div>
