--- a/public/tasks/src/app/views/homepageRequest/homepageRequest.html
+++ b/public/tasks/src/app/views/homepageRequest/homepageRequest.html
@@ -7,9 +7,9 @@
 			<span class="user-name">Ariadne</span>
 		</div>
 		<ul class="operation-list clearfix">
-			<li class="list-item myRequest"><a href="#">我的求P</a></li>
-			<li class="list-item myOffer unactive"><a href="#">我的帮P</a></li>
-			<li class="list-item myWork unactive"><a href="#">我的作品</a></li>
+			<li class="list-item myRequest"><a href="javascript:;">我的求P</a></li>
+			<li class="list-item myOffer unactive"><a href="javascript:;">我的帮P</a></li>
+			<li class="list-item myWork unactive"><a href="javascript:;">我的作品</a></li>
 		</ul>
 		<span class="setting">
 			<i class="icon-setting"></i>
@@ -18,7 +18,7 @@
 		<i class="icon-toggle-arrow"></i>
 	</div>
 	<div class="homepage-content comWidth">
-		<div class="content-myRequest hide">
+		<div class="content-myRequest">
 			<div class="content-section">
 				<div class="line-break clearfix">
 					<div class="break-date">
@@ -132,7 +132,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="content-myWork">
+		<div class="content-myWork hide">
 			<div class="content-section">
 				<div class="line-break clearfix">
 					<div class="break-date">
@@ -149,21 +149,59 @@
 							<!-- delete-button为hover时效果 -->
 						</div>
 						<div class="work-detail clearfix">
-							<span class="pubtime">11:00</span>
+							<span class="pubtime">12:00</span>
 							<span class="communicate">
 								<span class="comment">
 									<i class="icon-comment-small"></i>
-									<span class="comment-text-small"></span>
+									<span class="comment-text-small">6</span>
 								</span>
 								<span class="like">
 									<i class="icon-like-small"></i>
-									<span class="like-text-small"></span>
+									<span class="like-text-small">233</span>
 								</span>
 							</span>
 						</div>
 					</div>
-					<div class="work-item"></div>
-					<div class="work-item"></div>
+					<div class="work-item">
+						<div class="work-wrapper">
+							<img src="/img/work-item-2.png" alt="用户作品">
+							<input class="work-delete-btn hide" type="button" value="删除">
+							<!-- delete-button为hover时效果 -->
+						</div>
+						<div class="work-detail clearfix">
+							<span class="pubtime">11:30</span>
+							<span class="communicate">
+								<span class="comment">
+									<i class="icon-comment-small"></i>
+									<span class="comment-text-small">6</span>
+								</span>
+								<span class="like">
+									<i class="icon-like-small"></i>
+									<span class="like-text-small">233</span>
+								</span>
+							</span>
+						</div>
+					</div>
+					<div class="work-item">
+						<div class="work-wrapper">
+							<img src="/img/work-item-3.png" alt="用户作品">
+							<input class="work-delete-btn hide" type="button" value="删除">
+							<!-- delete-button为hover时效果 -->
+						</div>
+						<div class="work-detail clearfix">
+							<span class="pubtime">10:30</span>
+							<span class="communicate">
+								<span class="comment">
+									<i class="icon-comment-small"></i>
+									<span class="comment-text-small">6</span>
+								</span>
+								<span class="like">
+									<i class="icon-like-small"></i>
+									<span class="like-text-small">233</span>
+								</span>
+							</span>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
