--- a/public/tasks/src/less/homepage.less
+++ b/public/tasks/src/less/homepage.less
@@ -72,7 +72,7 @@ body{
 				}
 			}
 			.unactive{
-				border:0;
+				border:1px solid #fff;
 				a{
 					color: #bababa;
 				}
@@ -402,13 +402,12 @@ body{
 					.work-item{
 						float: left;
 						width: 240px;
-						margin-right: 65px;/*last work-item should be modified*/
 						.work-wrapper{
 							position: relative;
 							overflow: hidden;
 							width: 100%;
 							border: 1px solid #fff;
-							border-radius: 10px;
+							border-radius: 5px;
 							img{
 								display: block;
 								width: 100%;
@@ -425,27 +424,63 @@ body{
 								font-size: 14px;
 								background-color:#000; /*8e8f7e*/
 								opacity: 0.5;
+								cursor: pointer;
 							}
 						}
 						.work-detail{
 							width: 100%;
+							margin-top: 20px;
 							.pubtime{
 								display: block;
 								float: left;
+								color: #b7b7b7;
+								font-size: 14px;
 							}
 							.communicate{
 								display: block;
 								float: right;
+								width: 115px;
+								font-size: 14px;
+								color: #b7b7b7;
 								.comment{
 									display: block;
 									float: left;
+									cursor: pointer;
+									.icon-comment-small{
+										display: block;
+										float: left;
+										width: 17px;
+										height: 14px;
+										background: url(/img/index-sprite.png) no-repeat -113px -65px;
+									}
+									.comment-text-small{
+										display: block;
+										float: left;
+										margin-left: 8px;
+									}
 								}
 								.like{
 									display: block;
 									float: right;
+									cursor: pointer;
+									.icon-like-small{
+										display: block;
+										float: left;
+										width: 17px;
+										height: 14px;
+										background: url(/img/index-sprite.png) no-repeat -113px -92px;
+									}
+									.like-text-small{
+										display: block;
+										float: left;
+										margin-left: 8px;
+									}
 								}
 							}
 						}
+					}
+					.work-item + .work-item{
+						margin-left: 66px;/*兄弟选择器*/
 					}
 				}
 			}
