homepageRequest add some JQ code

--- a/public/tasks/src/app/views/homepageRequest/homepageRequest.html
+++ b/public/tasks/src/app/views/homepageRequest/homepageRequest.html
@@ -26,7 +26,7 @@
 						<span class="date-text">2016-03-09<em>12:00</em></span>
 					</div>
 					<div class="break-line"></div>
-					<div class="delete-button">
+					<div class="delete-button hide">
 						<input type="button" value="删除">
 					</div>
 				</div>
@@ -37,6 +37,13 @@
 					<div class="header-right">
 						<input class="header-button offerps" type="button" value="帮P">
 						<input class="header-button share" type="button" value="分享">
+						<div class="qrcode hide">
+							<i class="icon-arrow"></i>
+							<div class="icon-qrcode">
+								<img src="/img/qrcode.png" alt="二维码" class="qrcode-img">
+							</div>
+							<span class="qrcode-footer">分享到朋友圈</span>
+						</div>
 					</div>
 				</div>
 				<div class="work-zone clearfix">
@@ -62,6 +69,13 @@
 					<div class="header-right">
 						<input class="header-button offerps" type="button" value="帮P">
 						<input class="header-button share" type="button" value="分享">
+						<div class="qrcode hide">
+							<i class="icon-arrow"></i>
+							<div class="icon-qrcode">
+								<img src="/img/qrcode.png" alt="二维码" class="qrcode-img">
+							</div>
+							<span class="qrcode-footer">分享到朋友圈</span>
+						</div>
 					</div>
 				</div>
 				<div class="work-zone clearfix">
@@ -87,6 +101,13 @@
 					<div class="header-btn-wrapper">
 						<input type="button" value="上传作品" class="header-btn upload">
 						<input type="button" value="分享" class="header-btn share">
+						<div class="qrcode hide">
+							<i class="icon-arrow"></i>
+							<div class="icon-qrcode">
+								<img src="/img/qrcode.png" alt="二维码" class="qrcode-img">
+							</div>
+							<span class="qrcode-footer">分享到朋友圈</span>
+						</div>
 					</div>
 					<div class="delete-button"><input type="button" value="删除"></div>
 					<!-- delete button应为hover时效果 -->
@@ -115,6 +136,13 @@
 					<div class="header-btn-wrapper">
 						<input type="button" value="上传作品" class="header-btn upload">
 						<input type="button" value="分享" class="header-btn share">
+						<div class="qrcode hide">
+							<i class="icon-arrow"></i>
+							<div class="icon-qrcode">
+								<img src="/img/qrcode.png" alt="二维码" class="qrcode-img">
+							</div>
+							<span class="qrcode-footer">分享到朋友圈</span>
+						</div>
 					</div>
 					<div class="delete-button hide"><input type="button" value="删除"></div>
 					<!-- delete button应为mouseover时效果 -->
