--- a/public/tasks/src/less/homepage.less
+++ b/public/tasks/src/less/homepage.less
@@ -176,6 +176,7 @@ body{
 						}
 					}
 					.header-right{
+						position: relative;
 						float: right;
 						margin-right: 65px;
 						.header-button{
@@ -192,6 +193,44 @@ body{
 						}
 						.share{
 							background-color: #7ecef4;
+						}
+						.qrcode{
+							position: absolute;
+							z-index: 800;
+							bottom: -145px;
+							right: -11px;
+							width: 100px;
+							height: 145px;
+							border: 1px solid #fff;
+							border-radius: 5px;
+							overflow: hidden;
+							background-color: #fff;
+							.icon-arrow{
+								display: block;
+								width: 20px;
+								height: 10px;
+								margin: 0 auto;
+								background: url(/img/index-sprite.png)no-repeat -113px -42px;
+							}
+							.icon-qrcode{
+								width: 100%;
+								height: 106px;
+								overflow: hidden;
+								.qrcode-img{
+									display: block;
+									width: 100%;
+								}
+							}
+							.qrcode-footer{
+								display: block;
+								height: 30px;
+								width: 100%;
+								line-height: 30px;
+								font-size: 14px;
+								text-align: center;
+								color: #cbebfb;
+								background-color: #7ecef4;
+							}
 						}
 					}
 				}
@@ -272,6 +311,7 @@ body{
 						}
 					}
 					.header-btn-wrapper{
+						position: relative;
 						float: right;
 						.header-btn{
 							width: auto;
@@ -288,6 +328,44 @@ body{
 						}
 						.share{
 							background-color: #7ecef3;
+						}
+						.qrcode{
+							position: absolute;
+							z-index: 800;
+							bottom: -150px;
+							right: -17px;
+							width: 100px;
+							height: 145px;
+							border: 1px solid #fff;
+							border-radius: 5px;
+							overflow: hidden;
+							background-color: #fff;
+							.icon-arrow{
+								display: block;
+								width: 20px;
+								height: 10px;
+								margin: 0 auto;
+								background: url(/img/index-sprite.png)no-repeat -113px -42px;
+							}
+							.icon-qrcode{
+								width: 100%;
+								height: 106px;
+								overflow: hidden;
+								.qrcode-img{
+									display: block;
+									width: 100%;
+								}
+							}
+							.qrcode-footer{
+								display: block;
+								height: 30px;
+								width: 100%;
+								line-height: 30px;
+								font-size: 14px;
+								text-align: center;
+								color: #cbebfb;
+								background-color: #7ecef4;
+							}
 						}
 					}
 					.delete-button{
