--- a/public/services/src/less/common.less
+++ b/public/services/src/less/common.less
@@ -59,529 +59,239 @@ input::-webkit-input-placeholder {
 /*End reset*/
 
 /*公用*/
-.comWidth{
-	position: relative;
-	width: 980px;
-	margin: 0 auto;
-}
 body{
-	background-color: #f8f4f4;
-	font-family: 'HiraginoSansGB W3','sans-serif';
+	height: 100%;
+	color: #000;
+	font-family: 'PingFangSC-Regular','sans-serif';
 }
-
-/*header*/
-.header{
-	height: 60px;
-	width: 100%;
-	background-color: #ffaf47;
-	margin-bottom: 50px;
-	.left-area{
-		float: left;
-		.header-logo{
-			float: left;
-			margin-left: -40px;
-		}
-		.nav{
-			float: left;
-			width: 320px;
-			.nav-items{
-				float: left;
-				width: 80px;
-				margin: 0 40px;
-				vertical-align: top;
-				text-align: center;
-				font-size: 20px;
-				font-family: 'HiraginoSansGB W3','sans-serif';
-				line-height: 55px;
-				color: #e08d4b;
-				cursor: pointer;
-			}
-			.active{
-				color: #fff;
-				border-bottom: 4px solid #fff;
-			}
-		}
-	}
-	.function-list {
-		overflow: hidden;
-		position: absolute;
-		z-index: 9;
-		top: 0;
-		right: 97px;
-		width: 215px;
-		background-color: #fff;
-		border-radius: 0 0 30px 30px;
-		li {
-			display: block;
-		}
-		.patop {
-			height: 60px;
-			background-color: #ffaf47;
-			margin-bottom: 25px;
-		}
-		.name {
-			padding: 0 10px;
-			color: #000000;
-			font-size: 16px;
-			text-align: right;
-			margin-bottom: 10px;
-
-		}
-		.my-function {
-			width: 132px;
-			height: 34px;
-			border-radius: 30px;
-			margin: 0 auto 8px;
-			text-align: center;
-			line-height: 34px;
-			font-size: 16px;
-			color: #a9a9a9;
-		}
-		.my-function-change {
-			border: 1px solid #ffaf47;
-			color: #ffaf47;
-		}
-		.sign-out {
-			height: 50px;
-			background-color: #f8f4f4;
-			font-size: 16px;
-			color: #b7b7b7;
-			line-height: 50px;
-			text-align: center;
-		}
-	}
-	.right-area{
-		float: right;
-		font-size: 0px;
+.menu{
+	position: fixed;
+	bottom: 5%;/*to be modified*/
+	right: 4%;
+	z-index: 980;
+	.menuMy{
 		position: relative;
-		.header-portrait{
-			position: relative;
-			overflow: hidden;
-			z-index: 10;
-			display: inline-block;
-			vertical-align: top;
-			width: 37px;
-			height: 37px;
-			margin: 8px 106px 0 0;
-			border: 4px solid #ffaf47;
-			.portrait-icon{
-				display: block;
-				width: 100%;
-			}
+		display: block;
+		width: 3.29rem;
+		height: 3.29rem;
+		.menuBg{
+			width: 100%;
+			height: 100%;
+			opacity: 0.89;
+			border: 0.07rem solid rgba(255,255,255,0.89);
+			border-radius: 100%;
+			box-shadow: 0px 0.14rem 0.36rem 0px rgba(0,0,0,0.4);
+			background-color: #000;
 		}
-		.header-request{
+		.icon-My{
+			display: block;
+			width: 0.93rem;
+			height: 1.21rem;
 			position: absolute;
 			top: 0;
+			left: 0.25rem;
 			right: 0;
-			width: 70px;
-			height: 100px;
-			overflow: hidden;
-			.request-icon{
-				display: block;
-				width: 100%;
-				height: 100%;
-				background: url(/img/index-sprite.png)no-repeat -143px -42px;
-			}
+			bottom: 0;
+			margin: auto;
+			background: url(/images/icon-my.png) no-repeat 0 0;
+			background-size: 100%;
 		}
-	}
-}
-/*End header*/
-
-/*wrap-page*/
-.wrap-page{
-	.section-header{
-		height: 25px;
-		margin-top: 40px!important;
-		line-height: 25px;
-		color: #b7b7b7;
-		font-size: 14px;
-		font-family: 'HiraginoSansGB W3','sans-serif';
-		.latest{
-			float: left;
-			margin-left: 15px;
-			cursor: default;
-		}
-		.change{
-			float: right;
-			cursor: pointer;
-			.change-icon{
-				display: inline-block;
-				width: 14px;
-				height: 13px;
-				background: url(/img/index-sprite.png) no-repeat -27px -43px;
-			}
-			.change-text{
-				display: inline-block;
-				margin: 0 8px;
-			}
-		}
-<<<<<<< HEAD
-	}
-	.section{
-		margin-bottom: 35px;
-		border: 1px solid #e8e8e8;
-		background-color: #fff;
-		.section-top{
-			height: 90px;
-			padding: 15px 0;
-			margin: 0 15px;
-			border-bottom: 1px solid #e8e8e8;
-			font-size: 0;
-			.section-leftarea{
-				float: left;
-				font-size: 0;
-				.section-portrait{
-					display: inline-block;
-					width: 90px;
-					height: 90px;
-=======
-		.section-rightarea{
-			float: right;
-			font-size: 16px;
-			position: relative;
-			.section-btn{
-				width: 75px;
-				height: 35px;
-				margin-top: 30px;
-				border: 1px solid #f3f3f3;
-				border-radius: 15px;
-				color: #fff;
-			}
-			.ps{
-				background-color: #ffaf47;
-				margin-right: 20px;
-			}
-			.share{
-				background-color: #7ecef4;
-				margin-left: 20px;
-			}
-			.qrcode{
-				position: absolute;
-				z-index: 800;
-				bottom: -147px;
-				right: -15px;
-				width: 100px;
-				height: 145px;
-				border: 1px solid #fff;
-				border-radius: 5px;
-				overflow: hidden;
-				background-color: #fff;
-				.icon-arrow{
+		.menuMy-list{
+			display: block;
+			position: absolute;
+			bottom: -0.07rem;
+			right: -0.07rem;
+			width: 10.36rem;
+			padding: 0.57rem 0;
+			border-radius: 0.21rem;
+			box-shadow: 0px 0.14rem 0.36rem 0px rgba(0,0,0,0.4);
+			background-color: #fff;
+			.menuItem{
+				padding: 1rem 0;
+				margin-left: 1.64rem;
+				.icon-menuItem{
 					display: block;
-					width: 20px;
-					height: 10px;
-					margin: 0 auto;
-					background: url(/img/index-sprite.png)no-repeat -113px -42px;
-				}
-				.icon-qrcode{
-					width: 100%;
-					height: 106px;
->>>>>>> 9f41661c2fa1e44f5e1757f9cfb5f1e35b5b725e
-					overflow: hidden;
-					margin-right: 20px;
-					.section-portrait-img{
-						width: 100%;
-						display: block;
-					}
-				}
-				.section-info{
-					display: inline-block;
-					vertical-align: top;
-					font-size: 12px;/*del*/
-					.user-name{
-						color: #000;
-						font-size: 16px;
-						margin: 10px 0px 7px 0;
-					}
-					.pubdate{
-						color: #ccc;
-						font-size: 14px;
-						margin-bottom: 11px;
-					}
-					.command{
-						color: #000;
-						font-size: 18px;
-					}
-				}
-			}
-			.section-rightarea{
-				float: right;
-				font-size: 16px;
-				position: relative;
-				.section-btn{
-					width: 75px;
-					height: 35px;
-					margin-top: 30px;
-					border: 1px solid #f3f3f3;
-					border-radius: 15px;
-					color: #fff;
-				}
-				.ps{
-					background-color: #ffaf47;
-					margin-right: 20px;
-				}
-				.share{
-					background-color: #7ecef4;
-					margin-left: 20px;
-				}
-				.qrcode{
-					position: absolute;
-					z-index: 800;
-					bottom: -145px;
-					right: -15px;
-					width: 100px;
-					height: 145px;
-					border: 1px solid #fff;
-					border-radius: 5px;
-					overflow: hidden;
-					background-color: #fff;
-					.icon-arrow{
-						display: block;
-						width: 20px;
-						height: 10px;
-						margin: 0 auto;
-						background: url(/img/index-sprite.png)no-repeat -113px -42px;
-					}
-					.icon-qrcode{
-						width: 100%;
-						height: 106px;
-						overflow: hidden;
-						.qrcode-img{
-							display: block;
-							width: 100%;
-						}
-					}
-					.qrcode-footer{
-						display: block;
-						height: 30px;
-						width: 100%;
-						line-height: 30px;
-						font-size: 14px;
-						text-align: center;
-						color: #cbebfb;
-						background-color: #7ecef4;
-					}
-				}
-			}
-		}
-		.section-main{
-			margin: 20px 0;
-			.photos{
-				font-size: 0;
-				padding: 0 15px;
-				.photo-item{
 					float: left;
-					position: relative;
-					width: 238px;
-					overflow: hidden;
-					border: 1px solid #fff;
-					border-radius: 5px;
-					.item-wrapper{
-						width: 240px;
-						overflow: hidden;
-						.item-img{
-							width: 100%;
-							display: block;
-						}
-					}
+					width: 1.25rem;
+					height: 1.07rem;
 				}
-				.origin{
-					margin-right: 50px;
-					margin-left: 45px;
-				}
-				.artwork-1{
-					margin-left: 50px;
-					margin-right: 40px;
-				}
-				.artwork-2{
-					margin-right: 40px;
-				}
-				.icon-origin{
+				.text-menuItem{
 					display: block;
-					position: absolute;
-					bottom: 0px;
-					left: 0;
-					width: 45px;
-					height: 28px;
-					background: url(/img/index-sprite.png)no-repeat -234px -42px;
-					opacity: 0.9;
+					float: left;
+					margin-left: 0.68rem;
+					font-size: 1.07rem;
+					opacity: .89;
+					cursor: pointer;
+				}
+				.icon-menuItem-hall{
+					background:url(/images/icon-menuItem-hall.png) no-repeat center bottom;
+				}
+				.icon-menuItem-ask{
+					background: url(/images/icon-menuItem-ask.png)no-repeat center bottom;
+				}
+				.icon-menuItem-help{
+					background:url(/images/icon-menuItem-help.png) no-repeat center bottom;
+				}
+				.icon-menuItem-work{
+					background: url(/images/icon-menuItem-work.png)no-repeat center bottom;
 				}
 			}
 		}
 	}
-	.last-section{
-		margin-bottom: 0;
-	}
-}
-/*End wrap-page*/
-
-/*footer*/
-.footer{
-	position: relative;
-	height: 165px;
-	width: 100%;
-	.page-list{
+	.menuPs{
+		position: relative;
 		display: block;
-		position: absolute;
-		top: 50%;
-		left: 50%;
-		transform:translate(-50%,-50%);
-		font-size: 0px;
-		.list-item{
-			display: inline-block;
-			width: 40px;
-			height: 40px;
-			margin: 0 5px;
-			border: 1px solid #e8e8e8;
-			border-radius: 5px;
-			line-height: 40px;
-			font-size: 14px;
-			text-align: center;
-			color: #000;
-			background-color: #f6f6f6;
-			cursor: pointer;
+		width: 3.29rem;
+		height: 3.29rem;
+		margin-top: 0.93rem;
+		.menuBg{
+			width: 100%;
+			height: 100%;
+			opacity: 0.89;
+			border: 0.07rem solid rgba(255,255,255,0.89);
+			border-radius: 100%;
+			box-shadow: 0px 0.14rem 0.36rem 0px rgba(0,0,0,0.4);
+			background-color: #000;
 		}
-		.etc{
-			border: 0;
-			cursor: default;
+		.icon-Ps{
+			display: block;
+			width: 0.68rem;
+			height: 1rem;
+			position: absolute;
+			top: 0;
+			left: 0.36rem;
+			right: 0;
+			bottom: 0;
+			margin: auto;
+			background: url(/images/icon-ps.png) no-repeat 0 0;
+			background-size: 100%;
 		}
-		.prev,
-		.next{
-			width: 80px;
-		}
-		.false{
-			color: #a6a6a6;
-		}
-		.active{
-			color: #fff;
-			background-color: #ffa633;
+		.menuPs-list{
+			display: block;
+			position: absolute;
+			bottom: -0.07rem;
+			right: -0.07rem;
+			width: 10.36rem;
+			padding: 0.57rem 0;
+			border-radius: 0.21rem;
+			box-shadow: 0px 0.14rem 0.36rem 0px rgba(0,0,0,0.4);
+			background-color: #fff;
+			.menuItem{
+				padding: 1rem 0;
+				margin-left: 1.28rem;
+				.icon-menuItem{
+					display: block;
+					float: left;
+					margin-top: .15rem;
+					width: 1.25rem;
+					height: 1.07rem;
+				}
+				.text-menuItem{
+					display: block;
+					float: left;
+					margin-left: 1.04rem;
+					font-size: 1.07rem;
+					opacity: .89;
+					cursor: pointer;
+				}
+				.icon-menuItem-ask{
+					background: url(/images/icon-menuItem-ask.png)no-repeat center bottom;
+				}
+				.icon-menuItem-switch{
+					background: url(/images/icon-menuItem-switch.png)no-repeat center bottom;
+				}
+			}
 		}
 	}
 }
-/*End footer*/
-
-/*login-fix*/
-.login-fix {
-	position: fixed;
-	top: 0;
-	left: 0;
+.pageSection{
 	width: 100%;
 	height: 100%;
-	background-color: rgba(0,0,0,0.5);
-	z-index: 9999;
-	.login-panel{
-		position: absolute;
-		top: 50%;
-		left: 50%;
-		transform:translate(-50%,-50%);
-		width: 448px;
-		border:1px solid #4c4c4c;
-		border-radius: 10px;
-		overflow: hidden;
+	border-bottom: 0.36rem solid #F7F7F7;
+	.sectionHeader{
+		width: 100%;
+		height:3.93rem;
 		background-color: #fff;
-		.panel-header{
-			position: relative;
-			width: 100%;
-			height: 120px;
-			background: url(/img/panel-header.png) no-repeat 0 0;
-			.panel-nav{
-				position: absolute;
-				bottom: 0px;
-				left: 50%;
-				transform:translate(-50%,0);
-				display: block;
-				width: 282px;/*common width*/
-				height: 40px;
-				line-height: 33px;
-				.panel-nav-item{
-					display: block;
-					width: 60px;
-					text-align: center;
-					color: #c26d4c;
-					font-size: 20px;
-					font-weight: 500;
-					cursor: pointer;
-				}
-				.login{
-					float: left;
-				}
-				.register{
-					float: right;
-				}
-				.active{
-					color: #fff;
-					border-bottom: 4px solid #fff;
-				}
-			}
+		.userPortrait{
+			display: block;
+			float: left;
+			height: 1.79rem;
+			width: 1.79rem;
+			margin-left: 3%;
+			margin-top: 4%
 		}
-		.panel-content{
-			width: 100%;
-			.login-box{
-				width: 282px;
-				margin: 50px auto 0px auto;
-				.login-info{
-					width: 268px;
-					padding-left: 14px;
-					padding-bottom: 10px;
-					border-bottom: 1px solid #e8e8e8;
-					font-size: 14px;
-				}
-				.password{
-					margin-top: 45px;
-				}
-				.find-password{
-					display: block;
-					margin-top: 28px;
-					text-align: right;
-					font-size: 14px;
-					color: #b7b7b7;
-					cursor: pointer;
-				}
-				.loginNow{
-					width: 230px;
-					height: 35px;
-					margin: 33px 26px 0 26px;
-					border: 1px solid #e8e8e8;
-					border-radius: 17px;
-					color: #fff;
-					font-size: 16px;
-					background-color: #ffae48;
-				}
-			}
+		.userName{
+			display: block;
+			float: left;
+			margin-left: 0.36rem;
+			margin-top: 5%;
+			font-size: 1rem;
 		}
-		.panel-footer{
-			margin: 45px auto 0 auto;
-			width: 160px;
-			height: 95px;
-			text-align: center;
-			.logincorp-text{
-				font-size: 14px;
-				color: #b7b7b7;
-			}
-			.logincorp{
-				margin-top: 25px;
-				width: 100%;
-				.icon-weChat{
+	}
+	.sectionContent{
+		width: 100%;
+		img{
+			width: 100%;
+		}
+	}
+	.sectionFooter{
+		width: 100%;
+		padding:0 3%;
+		height: 6.07rem;
+		box-sizing: border-box;
+		.workDesc{
+			display: block;
+			font-size: 1.07rem;
+		}
+		.footerBottom{
+			.workCount{
+				float: left;
+				margin-top: 1.43rem;
+				line-height: 0.89rem;
+				cursor: pointer;
+				.icon-workCount{
 					display: block;
 					float: left;
-					width: 38px;
-					height: 33px;
-					margin-left: 8px;
-					background: url(/img/index-sprite.png) no-repeat -234px -120px;
-					cursor: pointer;
+					width: 1rem;
+					height: 0.89rem;
+					background: url(/images/icon-workCount.png) no-repeat 0 0;
+					background-size: 100%;
 				}
-				.icon-weibo{
+				.text-workCount{
 					display: block;
-					float: right;
-					width: 38px;
-					height: 33px;
-					margin-right: 8px;
-					background: url(/img/index-sprite.png) no-repeat -234px -75px;
-					cursor: pointer;
+					float: left;
+					margin-left: 0.35rem;
+					color: #b8b8b8;
+					font-size: 0.8rem;
+					letter-spacing: .1rem;
+				}
+			}
+			.helpPs{
+				float: right;
+				background-color: #FFED4F;
+				width: 5rem;
+				height: 2.14rem;
+				margin-top: 0.71rem;
+				line-height: 2.14rem;
+				font-size: 0;
+				text-align: center;
+				border-radius: 0.11rem;
+				cursor: pointer;
+				.icon-helpPs{
+					display: inline-block;
+					vertical-align: middle;
+					width: 1rem;
+					height: 1rem;
+					background: url(/images/icon-helpPs.png) no-repeat 0 0;
+					background-size: 100%;
+				}
+				.text-helpPs{
+					display: inline-block;
+					vertical-align: middle;
+					margin-left: 0.43rem;
+					font-size: 1rem;
 				}
 			}
 		}
 	}
 }
-
-/*End login-fix*/
