--- a/public/services/src/app/views/myAsk/myAsk.html
+++ b/public/services/src/app/views/myAsk/myAsk.html
@@ -36,34 +36,43 @@
 		</ul>
 	</li>
 </ul>
-<div class="index-pageSection">
-	<div class="sectionHeader clearfix">
-		<img src="/images/user-portrait.png" alt="用户头像" class="userPortrait">
-		<span class="userName">咩咩咩remy</span>
-	</div>
+<div class="myAsk-sectionHeader clearfix">
+	<img src="/images/user-portrait.png" alt="用户头像" class="userPortrait">
+	<span class="userName">我的求P</span>
+</div>
+<div class="myAsk-pageSection">
 	<div class="sectionContent">
 		<img src="/images/origin-work.png" alt="原图">
 	</div>
 	<div class="sectionFooter">
 		<span class="workDesc">求大神p</span>
 		<div class="footerBottom clearfix">
+			<span class="pubdate">
+				<span class="excDate">2016-3-14</span>
+				<span class="excTiming">12:12</span>
+			</span>
 			<div class="workCount">
 				<i class="icon-workCount"></i>
 				<span class="text-workCount">0作品</span>
 			</div>
-			<div class="helpPs">
-				<i class="icon-helpPs"></i>
-				<span class="text-helpPs">帮P</span>
-			</div>
 		</div>
 	</div>
 </div>
-<div class="index-pageSection">
-	<div class="sectionHeader clearfix">
-		<img src="/images/user-portrait.png" alt="用户头像" class="userPortrait">
-		<span class="userName">咩咩咩remy</span>
-	</div>
+<div class="myAsk-pageSection">
 	<div class="sectionContent">
 		<img src="/images/origin-work.png" alt="原图">
+	</div>
+	<div class="sectionFooter">
+		<span class="workDesc">求大神p</span>
+		<div class="footerBottom clearfix">
+			<span class="pubdate">
+				<span class="excDate">2016-3-14</span>
+				<span class="excTiming">12:12</span>
+			</span>
+			<div class="workCount">
+				<i class="icon-workCount"></i>
+				<span class="text-workCount">0作品</span>
+			</div>
+		</div>
 	</div>
 </div>
