--- a/public/services/src/less/common.less
+++ b/public/services/src/less/common.less
@@ -78,7 +78,7 @@ body{
 			width: 100%;
 			height: 100%;
 			opacity: 0.89;
-			border: 0.07rem solid rgba(255,255,255,0.89);
+			border: 0.08rem solid rgba(255,255,255,0.9);
 			border-radius: 100%;
 			box-shadow: 0px 0.14rem 0.36rem 0px rgba(0,0,0,0.4);
 			background-color: #000;
@@ -148,7 +148,7 @@ body{
 			width: 100%;
 			height: 100%;
 			opacity: 0.89;
-			border: 0.07rem solid rgba(255,255,255,0.89);
+			border: 0.08rem solid rgba(255,255,255,0.9);
 			border-radius: 100%;
 			box-shadow: 0px 0.14rem 0.36rem 0px rgba(0,0,0,0.4);
 			background-color: #000;
@@ -204,7 +204,7 @@ body{
 		}
 	}
 }
-.pageSection{
+.index-pageSection{
 	width: 100%;
 	height: 100%;
 	border-bottom: 0.36rem solid #F7F7F7;
@@ -253,7 +253,7 @@ body{
 					display: block;
 					float: left;
 					width: 1rem;
-					height: 0.89rem;
+					height: 0.93rem;
 					background: url(/images/icon-workCount.png) no-repeat 0 0;
 					background-size: 100%;
 				}
