--- a/public/services/src/app/views/myHelp/myHelp.html
+++ b/public/services/src/app/views/myHelp/myHelp.html
@@ -38,9 +38,13 @@
 </ul>
 <div class="sectionHeader clearfix">
 	<img src="/images/user-portrait.png" alt="用户头像" class="userPortrait">
-	<span class="userName">我的求P</span>
+	<span class="userName">我的帮P</span>
 </div>
-<div class="myAsk-pageSection">
+<div class="sectionHeader clearfix">
+	<img src="/images/user-portrait.png" alt="用户头像" class="userPortrait">
+	<span class="userName">咩咩咩remy</span>
+</div>
+<div class="myHelp-pageSection">
 	<div class="sectionContent">
 		<img src="/images/origin-work.png" alt="原图">
 	</div>
@@ -51,14 +55,24 @@
 				<span class="excDate">2016-3-14</span>
 				<span class="excTiming">12:12</span>
 			</span>
-			<div class="workCount">
-				<i class="icon-workCount"></i>
-				<span class="text-workCount">0作品</span>
+			<div class="workHandler">
+				<div class="handlerUpload clearfix">
+					<i class="icon-upload"></i>
+					<span class="text-handlerUpload">上传作品</span>
+				</div>
+				<div class="handlerDelete clearfix">
+					<i class="icon-delete"></i>
+					<span class="text-handlerDelete">删除</span>
+				</div>
 			</div>
 		</div>
 	</div>
 </div>
-<div class="myAsk-pageSection">
+<div class="sectionHeader clearfix">
+	<img src="/images/user-portrait.png" alt="用户头像" class="userPortrait">
+	<span class="userName">咩咩咩remy</span>
+</div>
+<div class="myHelp-pageSection">
 	<div class="sectionContent">
 		<img src="/images/origin-work.png" alt="原图">
 	</div>
@@ -69,9 +83,15 @@
 				<span class="excDate">2016-3-14</span>
 				<span class="excTiming">12:12</span>
 			</span>
-			<div class="workCount">
-				<i class="icon-workCount"></i>
-				<span class="text-workCount">0作品</span>
+			<div class="workHandler">
+				<div class="handlerUpload clearfix">
+					<i class="icon-upload"></i>
+					<span class="text-handlerUpload">上传作品</span>
+				</div>
+				<div class="handlerDelete clearfix">
+					<i class="icon-delete"></i>
+					<span class="text-handlerDelete">删除</span>
+				</div>
 			</div>
 		</div>
 	</div>
