--- a/public/services/src/less/common.less
+++ b/public/services/src/less/common.less
@@ -211,6 +211,8 @@ body{
 	.sectionHeader{
 		width: 100%;
 		height:3.93rem;
+		border: 0.04rem solid #DDDDDD;
+		border-top: 0;
 		background-color: #fff;
 		.userPortrait{
 			display: block;
