--- a/public/services/src/less/myPage.less
+++ b/public/services/src/less/myPage.less
@@ -1,6 +1,8 @@
-.myAsk-sectionHeader{
+.sectionHeader{
 	width: 100%;
 	height:3.93rem;
+	border: 0.04rem solid #DDDDDD;
+	border-top: 0;
 	background-color: #fff;
 	.userPortrait{
 		display: block;
@@ -68,6 +70,85 @@
 					font-size: 0.86rem;
 					color: #7f7f7f;
 					letter-spacing: .1rem;
+				}
+			}
+		}
+	}
+}
+.myHelp-pageSection{
+	width: 100%;
+	border-bottom: 0.36rem solid #F7F7F7;
+	.sectionContent{
+		width: 100%;
+		img{
+			width: 100%;
+		}
+	}
+	.sectionFooter{
+		width: 100%;
+		padding:0 3%;
+		box-sizing: border-box;
+		.workDesc{
+			display: block;
+			font-size: 1.07rem;
+		}
+		.footerBottom{
+			margin-top: 1.46rem;
+			margin-bottom: 1.25rem;
+			margin-right: 0.91rem;
+			.pubdate{
+				display: block;
+				float: left;
+				margin-right: 0.86rem;
+				color: #000;
+				opacity: 0.3;
+				font-size: 0.86rem;
+				.excTiming{
+					margin-left: 0.29rem;
+				}
+			}
+			.workHandler{
+				float: right;
+				color: #333333;
+				.handlerUpload{
+					float: left;
+					cursor: pointer;
+					margin-left: 1.36rem;
+					.icon-upload{
+						display: block;
+						float: left;
+						width: 0.82rem;
+						height: 0.93rem;
+						margin-top: .15rem;
+						margin-right: 0.25rem;
+						background: url(/images/icon-upload.png)no-repeat 0 0;
+						background-size: 100%;
+					}
+					.text-handlerUpload{
+						display: block;
+						float: left;
+						font-size: 0.82rem;
+					}
+				}
+				.handlerDelete{
+					float: left;
+					cursor: pointer;
+					margin-left: 1.36rem;
+					.icon-delete{
+						display: block;
+						float: left;
+						width: 0.64rem;
+						height: 0.93rem;
+						margin-top: .15rem;
+						margin-right: 0.25rem;
+						background: url(/images/icon-delete.png)no-repeat 0 0;
+						background-size: 100%;
+					}
+					.text-handlerDelete{
+						display: block;
+						float: left;
+						font-size: 0.82rem;
+					}
 				}
 			}
 		}
