--- a/public/services/src/less/myPage.less
+++ b/public/services/src/less/myPage.less
@@ -154,3 +154,119 @@
 		}
 	}
 }
+.myWork-pageSection{
+	width: 100%;
+	background-color: #f7f7f7;
+	.workSection{
+		float: left;
+		width: 47%;
+		margin: 1.5%;
+		.workPic{
+			width: 100%;
+		}
+		.workSectionFooter{
+			background-color: #fff;
+			.footerWrapper{
+				float: right;
+				padding: 1rem 0;
+				.comment{
+					float: left;
+					line-height: 0.89rem;
+					margin-right: 0.93rem;
+					cursor: pointer;
+					.icon-comment{
+						display: block;
+						float: left;
+						width: 0.89rem;
+						height: 0.89rem;
+						background: url(/images/icon-comment.png) no-repeat 0 0;
+						background-size: 100%;
+					}
+					.text-comment{
+						display: block;
+						float: left;
+						height: 0.89rem;
+						margin-left: 0.21rem;
+						font-size: 0.86rem;
+						font-family: "Helvetica-Light","sans-serif";
+						color: #000;
+						opacity: 0.3;
+					}
+				}
+				.like{
+					float: left;
+					line-height: 0.89rem;
+					margin-right: 0.93rem;
+					cursor: pointer;
+					.icon-like{
+						display: block;
+						float: left;
+						width: 0.89rem;
+						height: 0.89rem;
+						background: url(/images/icon-like.png) no-repeat 0 0;
+						background-size: 100%;
+					}
+					.text-like{
+						display: block;
+						float: left;
+						height: 0.89rem;
+						margin-left: 0.21rem;
+						font-size: 0.86rem;
+						font-family: "Helvetica-Light","sans-serif";
+						color: #000;
+						opacity: 0.3;
+					}
+				}
+			}
+		}
+	}
+}
+.myWork-none{
+	width: 100%;
+	.myWork-zone-bg{
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		background-color: #f7f7f7;
+		z-index: -1;
+	}
+	.emptyZone{
+		margin: 0 auto;
+		width: 4.65rem;
+		padding-top: 5.82rem;
+		.icon-empty{
+			display: block;
+			margin: 0 auto;
+			width:2.89rem;
+			height: 2.89rem;
+			background: url(/images/icon-empty.png) no-repeat 0 0;
+			background-size: 100%;
+		}
+		.text-empty{
+			display: block;
+			margin-top: 0.61rem;
+			white-space: nowrap;
+			font-size: 0.93rem;
+			font-family: "PingFangSC-Regular","sans-serif";
+			color: #000;
+			opacity: 0.3;
+		}
+	}
+	.linkToHall{
+		display: block;
+		margin: 0 auto;
+		margin-top: 3.46rem;
+		width: 9.25rem;
+		height: 2.36rem;
+		line-height: 2.36rem;
+		border-radius: 1.36rem;
+		box-shadow: 0 0.07rem 0.36rem 0 rgba(225,228,9,0.7);
+		background-color: #ffe400;
+		text-align: center;
+		font-family: "PingFangSC-Regular","sans-serif";
+		font-size: 0.86rem;
+		color: #A27322;
+	}
+}
