my-page all completed

--- a/public/services/src/less/myPage.less
+++ b/public/services/src/less/myPage.less
@@ -20,210 +20,216 @@
 		font-size: 1rem;
 	}
 }
-.myAsk-pageSection{
-	width: 100%;
-	.sectionContent{
+.myAsk-page{
+	.myAsk-pageSection{
 		width: 100%;
-		img{
+		.sectionContent{
 			width: 100%;
-		}
-	}
-	.sectionFooter{
-		width: 100%;
-		padding:0 3%;
-		box-sizing: border-box;
-		.workDesc{
-			display: block;
-			font-size: 1.07rem;
-		}
-		.footerBottom{
-			margin-top: 1.46rem;
-			margin-bottom: 1.25rem;
-			.pubdate{
-				display: block;
-				float: left;
-				margin-right: 0.86rem;
-				color: #000;
-				opacity: 0.3;
-				font-size: 0.86rem;
-				.excTiming{
-					margin-left: 0.29rem;
-				}
+			img{
+				width: 100%;
 			}
-			.workCount{
+		}
+		.sectionFooter{
+			width: 100%;
+			padding:0 3%;
+			box-sizing: border-box;
+			.workDesc{
 				display: block;
-				float: left;
-				.icon-workCount{
+				font-size: 1.07rem;
+			}
+			.footerBottom{
+				margin-top: 1.46rem;
+				margin-bottom: 1.25rem;
+				.pubdate{
 					display: block;
 					float: left;
-					width: 0.93rem;
-					height: 0.86rem;
-					background: url(/images/icon-workCount-deepCol.png) no-repeat 0 0;
-					background-size: 100%;
-				}
-				.text-workCount{
-					display: block;
-					float: left;
-					margin-left: 0.43rem;
-					height: 0.86rem;
-					line-height: 0.86rem;
+					margin-right: 0.86rem;
+					color: #000;
+					opacity: 0.3;
 					font-size: 0.86rem;
-					color: #7f7f7f;
-					letter-spacing: .1rem;
+					.excTiming{
+						margin-left: 0.29rem;
+					}
+				}
+				.workCount{
+					display: block;
+					float: left;
+					.icon-workCount{
+						display: block;
+						float: left;
+						width: 0.93rem;
+						height: 0.86rem;
+						background: url(/images/icon-workCount-deepCol.png) no-repeat 0 0;
+						background-size: 100%;
+					}
+					.text-workCount{
+						display: block;
+						float: left;
+						margin-left: 0.43rem;
+						height: 0.86rem;
+						line-height: 0.86rem;
+						font-size: 0.86rem;
+						color: #7f7f7f;
+						letter-spacing: .1rem;
+					}
 				}
 			}
 		}
 	}
 }
-.myHelp-pageSection{
-	width: 100%;
-	border-bottom: 0.36rem solid #F7F7F7;
-	.sectionContent{
+.myHelp-page{
+	.myHelp-pageSection{
 		width: 100%;
-		img{
+		border-bottom: 0.36rem solid #F7F7F7;
+		.sectionContent{
 			width: 100%;
+			img{
+				width: 100%;
+			}
 		}
-	}
-	.sectionFooter{
-		width: 100%;
-		padding:0 3%;
-		box-sizing: border-box;
-		.workDesc{
-			display: block;
-			font-size: 1.07rem;
-		}
-		.footerBottom{
-			margin-top: 1.46rem;
-			margin-bottom: 1.25rem;
-			margin-right: 0.91rem;
-			.pubdate{
+		.sectionFooter{
+			width: 100%;
+			padding:0 3%;
+			box-sizing: border-box;
+			.workDesc{
 				display: block;
-				float: left;
-				margin-right: 0.86rem;
-				color: #000;
-				opacity: 0.3;
-				font-size: 0.86rem;
-				.excTiming{
-					margin-left: 0.29rem;
-				}
+				font-size: 1.07rem;
 			}
-			.workHandler{
-				float: right;
-				color: #333333;
-				.handlerUpload{
+			.footerBottom{
+				margin-top: 1.46rem;
+				margin-bottom: 1.25rem;
+				margin-right: 0.91rem;
+				.pubdate{
+					display: block;
 					float: left;
-					cursor: pointer;
-					margin-left: 1.36rem;
-					.icon-upload{
-						display: block;
-						float: left;
-						width: 0.82rem;
-						height: 0.93rem;
-						margin-top: .15rem;
-						margin-right: 0.25rem;
-						background: url(/images/icon-upload.png)no-repeat 0 0;
-						background-size: 100%;
-					}
-					.text-handlerUpload{
-						display: block;
-						float: left;
-						font-size: 0.82rem;
+					margin-right: 0.86rem;
+					color: #000;
+					opacity: 0.3;
+					font-size: 0.86rem;
+					.excTiming{
+						margin-left: 0.29rem;
 					}
 				}
-				.handlerDelete{
-					float: left;
-					cursor: pointer;
-					margin-left: 1.36rem;
-					.icon-delete{
-						display: block;
+				.workHandler{
+					float: right;
+					color: #333333;
+					.handlerUpload{
 						float: left;
-						width: 0.64rem;
-						height: 0.93rem;
-						margin-top: .15rem;
-						margin-right: 0.25rem;
-						background: url(/images/icon-delete.png)no-repeat 0 0;
-						background-size: 100%;
+						cursor: pointer;
+						margin-left: 1.36rem;
+						.icon-upload{
+							display: block;
+							float: left;
+							width: 0.82rem;
+							height: 0.93rem;
+							margin-top: .15rem;
+							margin-right: 0.25rem;
+							background: url(/images/icon-upload.png)no-repeat 0 0;
+							background-size: 100%;
+						}
+						.text-handlerUpload{
+							display: block;
+							float: left;
+							font-size: 0.82rem;
+						}
 					}
-					.text-handlerDelete{
-						display: block;
+					.handlerDelete{
 						float: left;
-						font-size: 0.82rem;
-					}
-				}
-			}
-		}
-	}
-}
-.myWork-pageSection{
-	width: 100%;
-	background-color: #f7f7f7;
-	.workSection{
-		float: left;
-		width: 47%;
-		margin: 1.5%;
-		.workPic{
-			width: 100%;
-		}
-		.workSectionFooter{
-			background-color: #fff;
-			.footerWrapper{
-				float: right;
-				padding: 1rem 0;
-				.comment{
-					float: left;
-					line-height: 0.89rem;
-					margin-right: 0.93rem;
-					cursor: pointer;
-					.icon-comment{
-						display: block;
-						float: left;
-						width: 0.89rem;
-						height: 0.89rem;
-						background: url(/images/icon-comment.png) no-repeat 0 0;
-						background-size: 100%;
-					}
-					.text-comment{
-						display: block;
-						float: left;
-						height: 0.89rem;
-						margin-left: 0.21rem;
-						font-size: 0.86rem;
-						font-family: "Helvetica-Light","sans-serif";
-						color: #000;
-						opacity: 0.3;
-					}
-				}
-				.like{
-					float: left;
-					line-height: 0.89rem;
-					margin-right: 0.93rem;
-					cursor: pointer;
-					.icon-like{
-						display: block;
-						float: left;
-						width: 0.89rem;
-						height: 0.89rem;
-						background: url(/images/icon-like.png) no-repeat 0 0;
-						background-size: 100%;
-					}
-					.text-like{
-						display: block;
-						float: left;
-						height: 0.89rem;
-						margin-left: 0.21rem;
-						font-size: 0.86rem;
-						font-family: "Helvetica-Light","sans-serif";
-						color: #000;
-						opacity: 0.3;
+						cursor: pointer;
+						margin-left: 1.36rem;
+						.icon-delete{
+							display: block;
+							float: left;
+							width: 0.64rem;
+							height: 0.93rem;
+							margin-top: .15rem;
+							margin-right: 0.25rem;
+							background: url(/images/icon-delete.png)no-repeat 0 0;
+							background-size: 100%;
+						}
+						.text-handlerDelete{
+							display: block;
+							float: left;
+							font-size: 0.82rem;
+						}
 					}
 				}
 			}
 		}
 	}
 }
-.myWork-none{
+.myWork-page{
+	.myWork-pageSection{
+		width: 100%;
+		background-color: #f7f7f7;
+		.workSection{
+			float: left;
+			width: 47%;
+			margin: 1.5%;
+			.workPic{
+				width: 100%;
+			}
+			.workSectionFooter{
+				background-color: #fff;
+				.footerWrapper{
+					float: right;
+					padding: 1rem 0;
+					.comment{
+						float: left;
+						line-height: 0.89rem;
+						margin-right: 0.93rem;
+						cursor: pointer;
+						.icon-comment{
+							display: block;
+							float: left;
+							width: 0.89rem;
+							height: 0.89rem;
+							background: url(/images/icon-comment.png) no-repeat 0 0;
+							background-size: 100%;
+						}
+						.text-comment{
+							display: block;
+							float: left;
+							height: 0.89rem;
+							margin-left: 0.21rem;
+							font-size: 0.86rem;
+							font-family: "Helvetica-Light","sans-serif";
+							color: #000;
+							opacity: 0.3;
+						}
+					}
+					.like{
+						float: left;
+						line-height: 0.89rem;
+						margin-right: 0.93rem;
+						cursor: pointer;
+						.icon-like{
+							display: block;
+							float: left;
+							width: 0.89rem;
+							height: 0.89rem;
+							background: url(/images/icon-like.png) no-repeat 0 0;
+							background-size: 100%;
+						}
+						.text-like{
+							display: block;
+							float: left;
+							height: 0.89rem;
+							margin-left: 0.21rem;
+							font-size: 0.86rem;
+							font-family: "Helvetica-Light","sans-serif";
+							color: #000;
+							opacity: 0.3;
+						}
+					}
+				}
+			}
+		}
+	}
+}
+.my-none{
 	width: 100%;
-	.myWork-zone-bg{
+	.none-bg{
 		position: absolute;
 		top: 0;
 		left: 0;
@@ -234,7 +240,6 @@
 	}
 	.emptyZone{
 		margin: 0 auto;
-		width: 4.65rem;
 		padding-top: 5.82rem;
 		.icon-empty{
 			display: block;
@@ -268,5 +273,15 @@
 		font-family: "PingFangSC-Regular","sans-serif";
 		font-size: 0.86rem;
 		color: #A27322;
+	}
+}
+#myWork-none{
+	.emptyZone{
+		width: 4.65rem;
+	}
+}
+#myHelp-none{
+	.emptyZone{
+		width: 7.14rem;
 	}
 }
