--- a/public/services/src/app/views/myWork/myWork.html
+++ b/public/services/src/app/views/myWork/myWork.html
@@ -40,55 +40,57 @@
 	<img src="/images/user-portrait.png" alt="用户头像" class="userPortrait">
 	<span class="userName">我的作品</span>
 </div>
-<div class="myWork-pageSection clearfix ">
-	<div class="workSection">
-		<img src="/images/work-item-1.png" alt="作品" class="workPic">
-		<div class="workSectionFooter clearfix">
-			<div class="footerWrapper">
-				<div class="comment">
-					<i class="icon-comment"></i>
-					<span class="text-comment">80</span>
-				</div>
-				<div class="like">
-					<i class="icon-like"></i>
-					<span class="text-like">26</span>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div class="workSection">
-		<img src="/images/work-item-3.png" alt="作品" class="workPic">
-		<div class="workSectionFooter clearfix">
-			<div class="footerWrapper">
-				<div class="comment">
-					<i class="icon-comment"></i>
-					<span class="text-comment">80</span>
-				</div>
-				<div class="like">
-					<i class="icon-like"></i>
-					<span class="text-like">26</span>
+<div class="myWork-page">
+	<div class="myWork-pageSection clearfix">
+		<div class="workSection">
+			<img src="/images/work-item-1.png" alt="作品" class="workPic">
+			<div class="workSectionFooter clearfix">
+				<div class="footerWrapper">
+					<div class="comment">
+						<i class="icon-comment"></i>
+						<span class="text-comment">80</span>
+					</div>
+					<div class="like">
+						<i class="icon-like"></i>
+						<span class="text-like">26</span>
+					</div>
 				</div>
 			</div>
 		</div>
-	</div>
-	<div class="workSection">
-		<img src="/images/work-item-2.png" alt="作品" class="workPic">
-		<div class="workSectionFooter clearfix">
-			<div class="footerWrapper">
-				<div class="comment">
-					<i class="icon-comment"></i>
-					<span class="text-comment">80</span>
+		<div class="workSection">
+			<img src="/images/work-item-3.png" alt="作品" class="workPic">
+			<div class="workSectionFooter clearfix">
+				<div class="footerWrapper">
+					<div class="comment">
+						<i class="icon-comment"></i>
+						<span class="text-comment">80</span>
+					</div>
+					<div class="like">
+						<i class="icon-like"></i>
+						<span class="text-like">26</span>
+					</div>
 				</div>
-				<div class="like">
-					<i class="icon-like"></i>
-					<span class="text-like">26</span>
+			</div>
+		</div>
+		<div class="workSection">
+			<img src="/images/work-item-2.png" alt="作品" class="workPic">
+			<div class="workSectionFooter clearfix">
+				<div class="footerWrapper">
+					<div class="comment">
+						<i class="icon-comment"></i>
+						<span class="text-comment">80</span>
+					</div>
+					<div class="like">
+						<i class="icon-like"></i>
+						<span class="text-like">26</span>
+					</div>
 				</div>
 			</div>
 		</div>
 	</div>
 </div>
-<div class="myWork-none hide">
-	<div class="myWork-zone-bg"></div>
+<div class="my-none hide" id="myWork-none">
+	<div class="none-bg"></div>
 	<div class="emptyZone">
 		<i class="icon-empty"></i>
 		<span class="text-empty">还没有作品</span>
