--- a/public/src/less/recommend.less
+++ b/public/src/less/recommend.less
@@ -2,13 +2,13 @@
 .clearfix { *zoom:1; }
 *{-webkit-tap-highlight-color:rgba(0,0,0,0);}
 .recommend-container {
-	    background: -moz-linear-gradient(top, #fff 0%, #F9F06B 100%);
+/*	    background: -moz-linear-gradient(top, #fff 0%, #F9F06B 100%);
 	    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#fff), color-stop(100%,#F9F06B));
 	    background: -webkit-linear-gradient(top, #fff 0%,#F9F06B 100%);
 	    background: -o-linear-gradient(top, #fff 0%,#F9F06B 100%);
 	    background: -ms-linear-gradient(top, #fff 0%,#F9F06B 100%);
     width: 100%;
-    height: 100%;
+    height: 100%;*/
 .recommend-section {
 	width: 100%;	
 	margin: 0 auto;	
