--- a/public/src/less/recommendh5.less
+++ b/public/src/less/recommendh5.less
@@ -1,5 +1,5 @@
 .recommend-container {
-	background-color: #FFF000;
+	/*background-color: #FFF000;*/
     width: 100%;
     height: 100%;
 .bg-2,.bg-3,.bg-4,.bg-5 {
