--- a/public/services/src/app/views/index/index.html
+++ b/public/services/src/app/views/index/index.html
@@ -66,4 +66,20 @@
 	<div class="sectionContent">
 		<img src="/images/origin-work.png" alt="原图">
 	</div>
+	<div class="sectionFooter">
+		<span class="workDesc">求大神p</span>
+		<div class="footerBottom clearfix">
+			<div class="workCount">
+				<i class="icon-workCount"></i>
+				<span class="text-workCount">0作品</span>
+			</div>
+			<div class="helpPs">
+				<i class="icon-helpPs"></i>
+				<span class="text-helpPs">帮P</span>
+			</div>
+		</div>
+	</div>
+</div>
+<div class="indexFooter">
+	<a href="javascript:;" class="viewMore">查看更多</a>
 </div>
