--- a/public/services/src/app/views/post/post.html
+++ b/public/services/src/app/views/post/post.html
@@ -148,7 +148,7 @@
 		</div>
 	</div>
 </div>
-<div class="window-fix" id="commentWindow">
+<div class="window-fix hide" id="commentWindow">
 	<div class="windowBg"></div>
 	<div class="window clearfix">
 		<textarea class="windowContent" placeholder="评论"></textarea>
