--- a/public/services/src/app/views/myWork/myWork.html
+++ b/public/services/src/app/views/myWork/myWork.html
@@ -1,4 +1,8 @@
 <ul class="menu">
+	<li class="menuTop hide">
+		<div class="menuBg"></div>
+		<i class="icon-top"></i>
+	</li>
 	<li class="menuMy">
 		<div class="menuBg"></div>
 		<i class="icon-My"></i>
