--- a/public/services/src/less/common.less
+++ b/public/services/src/less/common.less
@@ -126,15 +126,19 @@ body{
 				}
 				.icon-menuItem-hall{
 					background:url(/images/icon-menuItem-hall.png) no-repeat center bottom;
+					background-size: contain;
 				}
 				.icon-menuItem-ask{
 					background: url(/images/icon-menuItem-ask.png)no-repeat center bottom;
+					background-size: contain;
 				}
 				.icon-menuItem-help{
 					background:url(/images/icon-menuItem-help.png) no-repeat center bottom;
+					background-size: contain;
 				}
 				.icon-menuItem-work{
 					background: url(/images/icon-menuItem-work.png)no-repeat center bottom;
+					background-size: contain;
 				}
 			}
 		}
@@ -197,9 +201,11 @@ body{
 				}
 				.icon-menuItem-ask{
 					background: url(/images/icon-menuItem-ask.png)no-repeat center bottom;
+					background-size: contain;
 				}
 				.icon-menuItem-switch{
 					background: url(/images/icon-menuItem-switch.png)no-repeat center bottom;
+					background-size: contain;
 				}
 			}
 		}
