--- a/public/services/src/app/views/uploadWork/uploadWork.html
+++ b/public/services/src/app/views/uploadWork/uploadWork.html
@@ -1,7 +1,7 @@
 <div class="uploadHeader" >
 	<div class="backPage">
 		<i class="icon-backPage"></i>
-		<span class="text-backPage">发布求P</span>
+		<span class="text-backPage">发布作品</span>
 	</div>
 	<input type="text" value="发布" class="confirm">
 </div>
@@ -19,5 +19,5 @@
 			<div class="thumb"></div>
 		</div>
 	</div>
-	<textarea class="uploadDesc" placeholder="请输入至少10字说明求P"></textarea>
+	<textarea class="uploadDesc" placeholder="请添加作品描述"></textarea>
 </div>
