--- a/public/services/src/less/upload.less
+++ b/public/services/src/less/upload.less
@@ -99,31 +99,35 @@
 		border-bottom: 0.04rem solid #F0F0F0;
 		height: 6.07rem;
 		line-height: 6.07rem;
-		.picPlaceHolder{
+		.uploadThumb{
 			margin-top: 1.07rem;
 			position: relative;
 			float: left;
 			width: 3.93rem;
 			height: 3.93rem;
-			.holderBorder{
+			.uploadCancel{
 				position: absolute;
-				z-index: 0;
-				top: 0rem;
-				left: 0rem;
-				width: 3.93rem;
-				height: 3.93rem;
-				background: url(/images/holderBorder.png)no-repeat 0 0;
+				display: block;
+				z-index: 1;
+				top: -0.7rem;
+				right: -0.8rem;
+				width: 1.29rem;
+				height: 1.32rem;
+				background: url(/images/uploadCancel.png)no-repeat 0 0;
 				background-size: 100%;
+				cursor: pointer;
 			}
-			.holderMain{
+			.thumb{
 				position: absolute;
+				border-radius: 0.21rem;
+				overflow: hidden;
 				top: 45%;
 				left: 54%;
 				transform: translate(-50%,-50%);
-				z-index: 1;
-				width: 2.21rem;
-				height: 2.25rem;
-				background: url(/images/holderMain.png) no-repeat 0 0;
+				z-index: 0;
+				width: 3.93rem;
+				height: 3.93rem;
+				background: url(/images/origin-work.png) no-repeat 0 0;
 				background-size: 100%;
 			}
 		}
@@ -136,5 +140,69 @@
 	}
 	.uploadDesc{
 		margin: 1.07rem 0;
+	}
+}
+.downloadHeader{
+	width: 100%;
+	height: 3.93rem;
+	line-height: 3.93rem;
+	border:0.04rem solid #EDEDED;
+	font-size: 0;
+	.backPage{
+		float: left;
+		margin-left: 0.82rem;
+		cursor: pointer;
+		.icon-backPage{
+			display: inline-block;
+			vertical-align: middle;
+			width: 0.75rem;
+			height: 1.36rem;
+			background: url(/images/icon-backPage.png) no-repeat 0 0;
+			background-size: 100%;
+		}
+		.text-backPage{
+			display: inline-block;
+			vertical-align: middle;
+			margin-left: 0.46rem;
+			font-size: 1rem;
+			font-family: "PingFangSC-Regular","sans-serif";
+			color: #000;
+			opacity: 0.8;
+		}
+	}
+}
+.downloadContent{
+	widows: 100%;
+	.originPic{
+		display: block;
+		width: 100%;
+	}
+	.downloadFooter{
+		padding: 1.14rem 0;
+		.downloadBtn{
+			font-size: 0;
+			display: block;
+			margin: 0 auto;
+			width: 8.71rem;
+			height: 2.36rem;
+			line-height: 2.36rem;
+			text-align: center;
+			color: #332D00;
+			border-radius: 1.21rem;
+			box-shadow: 0 0.07rem 0.36rem 0 rgba(255,225,9,0.7);
+			background-color: #ffe400;
+			.icon-download{
+				display: inline-block;
+				vertical-align: middle;
+				width: 0.82rem;
+				height: 0.86rem;
+				background: url(/images/icon-download.png)no-repeat 0 0;
+				background-size: contain;
+			}
+			.text-download{
+				font-size: 0.93rem;
+				vertical-align: middle;
+			}
+		}
 	}
 }
