--- a/public/services/src/app/views/myWork/myWork.html
+++ b/public/services/src/app/views/myWork/myWork.html
@@ -1,52 +1,10 @@
-<ul class="menu">
-	<li class="menuTop hide">
-		<div class="menuBg"></div>
-		<i class="icon-top"></i>
-	</li>
-	<li class="menuMy">
-		<div class="menuBg"></div>
-		<i class="icon-My"></i>
-		<ul class="menuMy-list hide">
-			<li class="menuItem clearfix">
-				<i class="icon-menuItem icon-menuItem-hall"></i>
-				<span class="text-menuItem">求P大厅</span>
-			</li>
-			<li class="menuItem clearfix">
-				<i class="icon-menuItem icon-menuItem-ask"></i>
-				<span class="text-menuItem">我的求P</span>
-			</li>
-			<li class="menuItem clearfix">
-				<i class="icon-menuItem icon-menuItem-help"></i>
-				<span class="text-menuItem">我的帮P</span>
-			</li>
-			<li class="menuItem clearfix">
-				<i class="icon-menuItem icon-menuItem-work"></i>
-				<span class="text-menuItem">我的作品</span>
-			</li>
-		</ul>
-	</li>
-	<li class="menuPs">
-		<div class="menuBg"></div>
-		<i class="icon-Ps"></i>
-		<ul class="menuPs-list hide">
-			<li class="menuItem clearfix">
-				<i class="icon-menuItem icon-menuItem-ask"></i>
-				<span class="text-menuItem">求P</span>
-			</li>
-			<li class="menuItem clearfix">
-				<i class="icon-menuItem icon-menuItem-switch"></i>
-				<span class="text-menuItem">换一换</span>
-			</li>
-		</ul>
-	</li>
-</ul>
 <div class="sectionHeader clearfix">
 	<img src="/images/user-portrait.png" alt="用户头像" class="userPortrait">
 	<span class="userName">我的作品</span>
 </div>
 <div class="myWork-page">
-	<div class="myWork-pageSection clearfix">
-		<div class="workSection">
+	<div class="myWork-pageSection grid clearfix">
+		<div class="workSection grid-item">
 			<img src="/images/work-item-1.png" alt="作品" class="workPic">
 			<div class="workSectionFooter clearfix">
 				<div class="footerWrapper">
@@ -61,7 +19,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="workSection">
+		<div class="workSection grid-item">
 			<img src="/images/work-item-3.png" alt="作品" class="workPic">
 			<div class="workSectionFooter clearfix">
 				<div class="footerWrapper">
@@ -76,7 +34,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="workSection">
+		<div class="workSection grid-item">
 			<img src="/images/work-item-2.png" alt="作品" class="workPic">
 			<div class="workSectionFooter clearfix">
 				<div class="footerWrapper">
