--- a/public/services/src/app/views/uploadOrigin/uploadOrigin.html
+++ b/public/services/src/app/views/uploadOrigin/uploadOrigin.html
@@ -13,7 +13,7 @@
 		</div>
 		<span class="uploadText">上传图片</span>
 	</div>
-	<div class="uploadPic hide">
+	<div class="uploadPic ">
 		<div class="uploadThumb clearfix">
 			<i class="uploadCancel"></i>
 			<div class="thumb"></div>
