--- a/public/services/src/less/post.less
+++ b/public/services/src/less/post.less
@@ -112,6 +112,7 @@
 			margin: 1.18rem 0 1.32rem 0;
 			.commentBlock{
 				float: left;
+				line-height: 1.43rem;
 				.userName{
 					display: inline-block;
 					vertical-align: top;
@@ -157,6 +158,7 @@
 				.userNameGroup{
 					display: block;
 					float: left;
+					line-height: 1.43rem;
 					.userName-reply{
 						display: block;
 						float: left;
@@ -179,6 +181,7 @@
 				}
 				.commentText{
 					width: 17rem;
+					line-height: 1.43rem;
 				}
 			}
 		}
