--- a/public/services/src/app/views/post/post.html
+++ b/public/services/src/app/views/post/post.html
@@ -46,7 +46,7 @@
 		</div>
 	</div>
 	<div class="commentDetail">
-		<span class="commentLine commentReply clearfix">
+		<div class="commentLine commentReply clearfix">
 			<div class="commentBlock">
 				<span class="userNameGroup">
 					<span class="userName-reply">咩咩</span>
@@ -59,8 +59,8 @@
 				<span class="optionItem reply">回复</span>
 				<span class="optionItem delete">删除</span>
 			</div>
-		</span>
-		<span class="commentLine clearfix">
+		</div>
+		<div class="commentLine clearfix">
 			<div class="commentBlock">
 				<span class="userName">空耳君:</span>
 				<span class="commentText">大神能帮我转一个吗大神能帮我转一个吗大神能帮我转一个吗</span>
@@ -69,8 +69,8 @@
 				<span class="optionItem reply">回复</span>
 				<span class="optionItem delete">删除</span>
 			</div>
-		</span>
-		<span class="commentLine clearfix">
+		</div>
+		<div class="commentLine clearfix">
 			<div class="commentBlock">
 				<span class="userName">azalea:</span>
 				<span class="commentText">大神能帮我转一个吗</span>
@@ -79,7 +79,7 @@
 				<span class="optionItem reply">回复</span>
 				<span class="optionItem delete">删除</span>
 			</div>
-		</span>
+		</div>
 	</div>
 	<a href="javascript:;" class="viewMore">查看更多</a>
 </div>
