--- a/public/services/src/less/post.less
+++ b/public/services/src/less/post.less
@@ -108,7 +108,6 @@
 		border-top: 1px solid #eaeaea;
 		border-bottom: 1px solid #eaeaea;
 		.commentLine{
-			display: block;
 			margin: 1.18rem 0 1.32rem 0;
 			.commentBlock{
 				float: left;
@@ -315,5 +314,47 @@
 		height: 11.43rem;
 		padding: 0.79rem 0.79rem;
 		color: #5F5F5F;
+	}
+}
+.deleteComment-fix{
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: #000;
+	opacity: 0.8;
+	.deleteComment{
+		position: absolute;
+		top: 16.64rem;
+		left: 50%;
+		transform: translate(-50%,0);
+		width: 20rem;
+		height: 10.71rem;
+		box-sizing:border-box;
+		padding: 1.07rem 1.43rem;
+		background-color: #fff;
+		border: 1px solid #979797;
+		border-radius: 0.36rem;
+		.alertText{
+			font-family: "PingFangSC-Regular","sans-serif";
+			font-size: 1.29rem;
+			color: #000;
+		}
+		.deleteOperation{
+			position: absolute;
+			bottom: 1.07rem;
+			right: 1.43rem;
+			font-size: 1.07rem;
+			font-family: "PingFangSC-Regular","sans-serif";
+			.cancelDelete{
+				color: #000;
+				opacity: 0.6;
+			}
+			.confirmDelete{
+				margin-left: 2.57rem;
+				color: #fe5401;
+			}
+		}
 	}
 }
