--- a/public/services/src/app/views/post/post.html
+++ b/public/services/src/app/views/post/post.html
@@ -46,39 +46,39 @@
 		</div>
 	</div>
 	<div class="commentDetail">
-		<div class="commentLine commentReply clearfix">
-			<div class="commentBlock">
+		<div class="commentLine commentReply">
+			<div class="commentHead clearfix">
 				<span class="userNameGroup">
 					<span class="userName-reply">咩咩</span>
 					<em>回复</em>
 					<span class="userName-beReplied">空耳君:</span>
 				</span>
-				<span class="commentText">大神能帮我转一个吗大神能帮我转一个吗大神能帮我转一个吗</span>
+				<div class="commentOption">
+					<span class="optionItem reply">回复</span>
+					<span class="optionItem delete">删除</span>
+				</div>
 			</div>
-			<div class="commentOption">
-				<span class="optionItem reply">回复</span>
-				<span class="optionItem delete">删除</span>
-			</div>
+			<span class="commentText">咩咩</span>
 		</div>
-		<div class="commentLine clearfix">
-			<div class="commentBlock">
-				<span class="userName">空耳君:</span>
-				<span class="commentText">大神能帮我转一个吗大神能帮我转一个吗大神能帮我转一个吗</span>
+		<div class="commentLine">
+			<div class="commentHead clearfix">
+				<span class="userName">空耳君：</span>
+				<div class="commentOption">
+					<span class="optionItem reply">回复</span>
+					<span class="optionItem delete">删除</span>
+				</div>
 			</div>
-			<div class="commentOption">
-				<span class="optionItem reply">回复</span>
-				<span class="optionItem delete">删除</span>
-			</div>
+			<span class="commentText">大神能帮我转一个吗大神能帮我转一个吗大神能帮我转一个吗大神能帮我转一个吗</span>
 		</div>
-		<div class="commentLine clearfix">
-			<div class="commentBlock">
+		<div class="commentLine">
+			<div class="commentHead clearfix">
 				<span class="userName">azalea:</span>
-				<span class="commentText">大神能帮我转一个吗</span>
+				<div class="commentOption">
+					<span class="optionItem reply">回复</span>
+					<span class="optionItem delete hide">删除</span>
+				</div>
 			</div>
-			<div class="commentOption">
-				<span class="optionItem reply">回复</span>
-				<span class="optionItem delete">删除</span>
-			</div>
+			<span class="commentText">大神能帮我转一个吗</span>
 		</div>
 	</div>
 	<a href="javascript:;" class="viewMore">查看更多</a>
