--- a/public/services/src/less/post.less
+++ b/public/services/src/less/post.less
@@ -106,81 +106,64 @@
 		width: 94%;
 		margin: 0 3%;
 		border-top: 1px solid #eaeaea;
-		border-bottom: 1px solid #eaeaea;
 		.commentLine{
-			margin: 1.18rem 0 1.32rem 0;
-			.commentBlock{
-				float: left;
-				line-height: 1.43rem;
+			padding: 0.86rem 0 0.86rem 0;
+			border-bottom: 1px solid #eaeaea;
+			.commentHead{
 				.userName{
-					display: inline-block;
-					vertical-align: top;
-					/*float: left;*/
-					/*max-width: 25%;*/
-					max-width: 6.29rem;
-					height: 100%;
+					float: left;
 					color: #000;
 					font-size: 0.93rem;
 					font-family: "PingFangSC-Regular","sans-serif";
 				}
-				.commentText{
-					display: inline-block;
-					vertical-align: top;
-					/*float: left;*/
-					/*max-width: 82%;*/
-					max-width: 20.93rem;
-					font-size: 0.93rem;
-					font-family: "PingFangSC-Regular","sans-serif";
-					opacity: 0.6;
+				.commentOption{
+					float: right;
+					.optionItem{
+						font-family: "PingFangSC-Light","sans-serif";
+						font-size: 0.79rem;
+						cursor: pointer;
+					}
+					.reply{
+						color: #fe5401;
+						margin-right: 0.5rem;
+					}
+					.delete{
+						color: #000;
+						opacity: 0.6;
+						margin-left: 1.32rem;
+						margin-right: 0.5rem;
+					}
 				}
 			}
-			.commentOption{
-				float: right;
-				.optionItem{
-					font-family: "PingFangSC-Light","sans-serif";
-					font-size: 0.79rem;
-					cursor: pointer;
-				}
-				.reply{
-					color: #fe5401;
-					margin-right: 1.82rem;
-				}
-				.delete{
-					color: #000;
-					opacity: 0.6;
-					margin-right: 0.5rem;
-				}
+			.commentText{
+				margin-top: 0.46rem;
+				display: block;
+				width:100%;
+				font-size: 0.93rem;
+				font-family: "PingFangSC-Regular","sans-serif";
+				opacity: 0.6;
 			}
 		}
 		.commentReply{
-			.commentBlock{
-				.userNameGroup{
-					display: block;
+			padding-top: 1.14rem;
+			.userNameGroup{
+				float: left;
+				line-height: 1.43rem;
+				font-size: 0.93rem;
+				.userName-reply{
 					float: left;
-					line-height: 1.43rem;
-					.userName-reply{
-						display: block;
-						float: left;
-						width: 1.86rem;
-						white-space: nowrap;
-					}
-					em{
-						display: block;
-						float: left;
-						margin: 0 .25rem;
-						font-size: 0.93rem;
-						font-family: "PingFangSC-Regular","sans-serif";
-						opacity: 0.6;
-					}
-					.userName-beReplied{
-						display: block;
-						float: left;
-						width: 3.71rem;
-					}
+					width: 1.86rem;
+					white-space: nowrap;
 				}
-				.commentText{
-					width: 17rem;
-					line-height: 1.43rem;
+				em{
+					float: left;
+					margin: 0 .25rem;
+					font-family: "PingFangSC-Regular","sans-serif";
+					opacity: 0.6;
+				}
+				.userName-beReplied{
+					float: left;
+					width: 3.71rem;
 				}
 			}
 		}
