--- a/public/services/src/app/views/uploadOrigin/uploadOrigin.html
+++ b/public/services/src/app/views/uploadOrigin/uploadOrigin.html
@@ -3,7 +3,7 @@
 		<i class="icon-backPage"></i>
 		<span class="text-backPage">发布求P</span>
 	</div>
-	<input type="text" value="发布" class="confirm">
+	<input type="button" value="发布" class="confirm">
 </div>
 <div class="uploadContent">
 	<div class="uploadPic-none ">
@@ -19,5 +19,5 @@
 			<div class="thumb"></div>
 		</div>
 	</div>
-	<textarea class="uploadDesc" placeholder="请输入至少10字说明求P"></textarea>
+	<textarea autofocus="autofocus" class="uploadDesc" placeholder="请输入至少10字说明求P"></textarea>
 </div>
