--- a/public/services/src/app/views/post/post.html
+++ b/public/services/src/app/views/post/post.html
@@ -14,8 +14,14 @@
 				<span class="excTiming">12:12</span>
 			</span>
 			<div class="communicate">
-				<i class="icon-like-btn"></i>
-				<i class="icon-comment-btn"></i>
+				<div class="like-btn">
+					<i class="icon-like-btn"></i>
+					<span class="text-like-btn">33</span>
+				</div>
+				<div class="comment-btn">
+					<i class="icon-comment-btn"></i>
+					<span class="text-comment-btn">33</span>
+				</div>
 			</div>
 		</div>
 	</div>
