--- a/public/services/src/less/myPage.less
+++ b/public/services/src/less/myPage.less
@@ -22,6 +22,7 @@
 }
 .myAsk-page{
 	.myAsk-pageSection{
+		border-bottom: 0.43rem solid #f7f7f7;
 		width: 100%;
 		.sectionContent{
 			width: 100%;
