--- a/public/services/src/app/views/post/post.html
+++ b/public/services/src/app/views/post/post.html
@@ -39,7 +39,7 @@
 		<img src="/images/origin-work.png" alt="原图">
 	</div>
 	<div class="sectionFooter">
-		<span class="workDesc">求大神p</span>
+		<a href="/services/downloadOrigin/downloadOrigin" class="workDesc">求大神p</a>
 		<div class="footerBottom clearfix">
 			<span class="pubdate">
 				<span class="excDate">2016-3-14</span>
